--- a/resume.html
+++ b/resume.html
@@ -2,8 +2,6 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" type="text/css" href="dep/normalize.css/normalize.css" />
-    <link rel="stylesheet" type="text/css" href="dep/Font-Awesome/css/font-awesome.css" />
     <link rel="stylesheet" type="text/css" href="style.css" />
     <script type="text/javascript" src="https://d3js.org/d3.v4.min.js"></script>
 
@@ -197,7 +195,7 @@
         </ul>
     </div>
     <div class="side-block" id="disclaimer">
-        This essay was prepare using HTML/CSS/D3.js &mdash; see </code>
+        This essay was prepare using HTML/CSS/D3.js &mdash; see https://github.com/nagagit/e2_essay.git</code>
     </div>
 </aside>
 </body>
